test/files/pos/t9111/A.java
public final class A {
    public static final class T { }
    public static final class Inner {
      public static final class T { }
      public T newT() { return null; }
    }
  }
  